--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Push Multi-Platform Docker Image
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
+        tag: [latest, $(date +%Y%m%d)-${{ matrix.platform }}]
 
     steps:
     - name: Checkout code
@@ -37,5 +38,6 @@ jobs:
         context: .
         file: ./Dockerfile
         platforms: ${{ matrix.platform }}
-        tags: ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:latest
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:${{ matrix.tag }}
         push: true
