--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
-        tag: [latest, $(date +%Y%m%d)-${{ matrix.platform }}]
+        tag: ['latest', '$(date +%Y%m%d)-${{ matrix.platform }}']
 
     steps:
     - name: Checkout code
