--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         platform: [linux/amd64, linux/arm64]
-        tag: ['latest', '$(date +%Y%m%d)-${{ matrix.platform }}']
 
     steps:
     - name: Checkout code
@@ -38,7 +37,5 @@ jobs:
         context: .
         file: ./Dockerfile
         platforms: ${{ matrix.platform }}
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:latest
-          ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:${{ matrix.tag }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:latest
         push: true
