--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -11,13 +11,10 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        platform: [linux/amd64, linux/arm64]
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -31,12 +28,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
+    - name: Build and push multi-platform Docker image
       uses: docker/build-push-action@v3
       with:
         context: .
         file: ./Dockerfile
-        platforms: ${{ matrix.platform }}
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:latest-${{ matrix.platform }}
+        platforms: linux/amd64,linux/arm64
+        tags: ${{ secrets.DOCKER_USERNAME }}/bilibili-audio-downloader:latest
         push: true
