--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.2
 Werkzeug==2.0.2
-git+https://github.com/yt-dlp/yt-dlp.git
+#git+https://github.com/yt-dlp/yt-dlp.git
 click>=7.1.2
 itsdangerous>=2.0
 Jinja2>=3.0
