--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.0.2
-Werkzeug==2.0.2
-#git+https://github.com/yt-dlp/yt-dlp.git
-click>=7.1.2
-itsdangerous>=2.0
-Jinja2>=3.0
-MarkupSafe>=2.0
+flask[async]==3.0.2
+websockets==12.0
+yt-dlp==2024.3.10
+pytest==8.1.1
+pytest-asyncio==0.23.5
