--- a/.github/workflows/docker-multiarch.yml
+++ b/.github/workflows/docker-multiarch.yml
@@ -1,12 +1,16 @@
+# GitHub Actions 工作流配置
+# 用于构建和推送多架构Docker镜像
+
 name: Build and Push Multi-Platform Docker Image
 
+# 触发条件：推送到main/dev分支，创建tag，或创建PR时
 on:
   push:
     branches:
       - main
       - dev
     tags:
-      - 'v*'
+      - 'v*'  # 匹配所有版本标签
   pull_request:
     branches:
       - main
@@ -15,17 +19,20 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    # 设置权限：允许写入仓库内容和包
     permissions:
       contents: write
       packages: write
 
     steps:
+      # 检出代码，获取完整git历史用于版本号生成
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      # 生成版本号：dev分支使用日期.提交数.哈希值，main分支使用tag
       - name: Generate version
         id: version
         run: |
@@ -38,14 +45,17 @@ jobs:
             echo "TAG_SUFFIX=" >> $GITHUB_ENV
           fi
 
+      # 设置QEMU，支持多架构构建
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
+      # 设置Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/amd64,linux/arm64
 
+      # 缓存Docker层以加速构建
       - name: Cache Docker layers
         uses: actions/cache@v3
         with:
@@ -54,6 +64,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      # 登录到Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
