--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+# Web框架
 flask[async]==3.0.2
+
+# WebSocket支持
 websockets==12.0
+
+# 下载工具
 yt-dlp==2024.3.10
+
+# 测试工具
 pytest==8.1.1
 pytest-asyncio==0.23.5
