--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - PYTHONUNBUFFERED=1
       - FLASK_ENV=production
       - FLASK_APP=src.app:app
+      - FLASK_DEBUG=1  # 添加调试模式
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000"]
