--- a/.gitattributes
+++ b/.gitattributes
@@ -7,8 +7,20 @@ docker-entrypoint.sh text eol=lf
 *.py text eol=lf
 *.yml text eol=lf
 *.yaml text eol=lf
+Dockerfile text eol=lf
+docker-compose*.yml text eol=lf
+requirements.txt text eol=lf
+
+# 明确指定应该使用CRLF的文件
+*.bat text eol=crlf
+*.cmd text eol=crlf
+*.ps1 text eol=crlf
 
 # 明确指定二进制文件
 *.png binary
 *.jpg binary
-*.gif binary 
+*.gif binary
+*.ico binary
+*.zip binary
+*.tar binary
+*.gz binary 
