--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,12 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile
-      platforms:
-        - linux/amd64
-        - linux/arm64
+    image: nbzzd6/bili-audio-downloader:opt
     ports:
       - "5000:5000"
     volumes:
