--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,38 +1,44 @@
-FROM python:3.9-slim
+# 构建阶段
+FROM python:3.9-alpine AS builder
 
 WORKDIR /app
 
-# 安装系统依赖
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    ffmpeg \
-    build-essential \
-    gcc \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# 复制应用代码
-COPY . .
+# 安装构建依赖
+RUN apk add --no-cache \
+    build-base \
+    libffi-dev \
+    openssl-dev \
+    zlib-dev \
+    jpeg-dev
 
 # 安装Python依赖
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir --no-compile -r requirements.txt
 
-# 确保脚本可执行
-RUN chmod +x /app/src/app.py
+# 运行阶段
+FROM python:3.9-alpine
 
-# 设置环境变量
-ENV FLASK_ENV=production
+WORKDIR /app
 
-# 创建非root用户
-RUN useradd -m appuser && chown -R appuser /app
-USER appuser
+# 安装运行时依赖
+RUN apk add --no-cache ffmpeg
 
-# 健康检查
-HEALTHCHECK --interval=30s --timeout=3s \
-    CMD curl -f http://localhost:5000/health || exit 1
+# 从构建阶段复制已安装的Python包
+COPY --from=builder /usr/local/lib/python3.9/site-packages /usr/local/lib/python3.9/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
+# 复制应用代码
+COPY src/ src/
+COPY requirements.txt .
+
+# 创建数据目录
+RUN mkdir -p /app/audiobooks
 
 # 暴露端口
 EXPOSE 5000
 
-# 启动命令
+# 设置数据卷
+VOLUME /app/audiobooks
+
+# 设置默认命令
 CMD ["python", "src/app.py"]
