--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask==3.0.0
+werkzeug==3.0.1
 yt-dlp==2023.12.30
 requests==2.31.0
 python-dotenv==1.0.0
 flask-cors==4.0.0
 Pillow==10.2.0
-mutagen==1.47.0 
+mutagen==1.47.0
